# simplebuilder

./: .cspell.json  README.md  pyproject.toml
src/simplebuilder/: __main__.py
